--- a/index.html
+++ b/index.html
@@ -3,8 +3,43 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
+	<div id="wrapper">
+		<div class="header">
+			<div class="top-bar">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Facebook_logo_36x36.svg/1200px-Facebook_logo_36x36.svg.png">
+				<img src="https://cdn.pixabay.com/photo/2016/09/17/07/03/instagram-1675670_1280.png">
+				<img src="https://cdn.pixabay.com/photo/2017/08/23/11/30/twitter-2672572_960_720.jpg">
+			</div>
+			<div class="header-main">
+				<div class="logo">
+					<img src="https://cdn.dribbble.com/users/77598/screenshots/6543238/dribbble.png">
+				</div>
+				<div class="menu">
+					<ul>
+						<li><a href="h">Home</a></li>
+						<li><a href="h">About</a></li>
+						<li><a href="h">Contact</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="content">
+			<div class="banner">
+				<h1>Cosplay Girl Gamer PUBG</h1>
+				<img src="https://i.a4vn.com/2018/4/1/cosplay-pubg-mat-bung-ra-sua-khien-game-thu-khong-khoi-xao-xuyen-2dfa5e.jpg">
+				<img src="https://i.ytimg.com/vi/A6WRDabnZXI/maxresdefault.jpg">
+				<img src="https://gamek.mediacdn.vn/2018/5/14/photo-2-15262851864341864171422.jpg">
+				<img src="https://image.thanhnien.vn/660/uploaded/phunggiao/2019_01_21/game-thu-8_tvzl.jpg">
+				<h1>Highlight</h1>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/qn1clx7VKDA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<h1>My Channel Youtube</h1> <h1>https://www.youtube.com/channel/UCLM9cqvOGQ5745tfW5rN4cg</h1> 
+				<h1> Subrice and Like My New Video!!!</h1>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
